# genaiapps

./: .env.example  .gitignore  readme.md
backend/: Dockerfile  pyproject.toml
backend/src/app/: evals.py  main.py  openai_client.py  policy_store.py  schemas.py  security.py  settings.py  utils.py
backend/src/data/: policies.json
backend/src/policy_impact_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
infra/bicep/: main.bicep
infra/bicep/modules/: acr.bicep  containerApps.bicep
infra/scripts/: build_push.sh  deploy.sh
